syntax="proto3";
package proto;
import "proto/raft.proto";
import "proto/util.proto";


message HyperResponse {
    ResCode resCode = 1;
    ResMessage msg = 2;
}


message Config {
    Node node = 1;
    repeated Node peer =2;
    RaftOptions raft_options = 3;

}

message RaftOptions {
    uint64 max_cube_file_size = 1;
    string cube_dir = 2;

}