syntax="proto3";
package proto;


enum ResCode {
    SUCCESS = 0;
    FAIL = 1;
    WARNING = 2;
}

message ResMessage {
    string msg = 1;
}
